--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,14 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Algorithm-ClusterPoints
-version:      0.04
-version_from: lib/Algorithm/ClusterPoints.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Algorithm-ClusterPoints
+version:             0.06
+abstract:            ~
+license:             ~
+author:              
+    - Salvador Fandino <sfandino@yahoo.com>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
